<resources>
    <string name="app_name">CubagemApp</string>

    <string name="textApp">Cubagem</string>
    <string name="textCalculo">Cálculo</string>

    <string name="textComp">Medida de comprimento</string>
    <string name="textLarg">Medida de largura</string>
    <string name="textAlt">Medida de altura</string>
    <string name="textCalcular">Calcular</string>
    <string name="textTotal">Peso cubado = %.2f kg</string>
    <string name="textCubagem">Cubagem = %.2f m³</string>
    <string name="inputUser">m</string>

    <string name="textFator">Fator: 240</string>

    <style name="FullApp">
        <item name="android:fontFamily">@font/inter_semibold</item>
        <item name="android:textSize">35sp</item>
        <item name="android:textColor">#000000</item>
    </style>

    <style name="textInd">
        <item name="android:fontFamily">@font/inter_medium</item>
        <item name="android:textSize">25sp</item>
        <item name="android:textColor">#000000</item>
    </style>

    <style name="textTotal">
        <item name="android:fontFamily">@font/inter_semibold</item>
        <item name="android:textSize">25sp</item>
        <item name="android:textColor">#FFFFFF</item>
    </style>

    <style name="textButton">
        <item name="android:fontFamily">@font/inter_semibold</item>
        <item name="android:textSize">20sp</item>
        <item name="android:textColor">@color/white</item>
    </style>

    <style name="styleFator">
        <item name="android:fontFamily">@font/inter_semibold</item>
        <item name="android:textSize">15sp</item>
        <item name="android:textColor">#000000</item>
    </style>


</resources>